--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
     <section id="about">
         <div id="pic">
             <h1 class="headings">ABOUT ME</h1>
-            <div class="intro">
                 <img src="assets/images/michelle.jpeg" alt="">
-                <div class="parent">
+                <div class="intro">
                     <h2>MICHELLE NIJJAR</h2>
                     <p> A little bit about me is that I am a current student that is learning web development! Aside
                         from this, I also hold a bachelors degree in Finance from the University of Guelph. I have a
@@ -45,22 +44,17 @@
                         to see my portfolio and how to contact me! </p>
                 </div>
             </div>
-        </div>
     </section>
 
 
     <!---Portfolio Section-->
     <section id="portfolio">
-        <div id="row1">
-            <h1 class="headings">PORTFOLIO</h1>
-            <div class="gallery" style="border: 10px red;">
-                <img src="assets/images/runbuddypic.png" alt="">
-            </div>
+        <h1 class="headings">PORTFOLIO</h1>
+        <div class="gallery">
+            <img src="assets/images/runbuddypic.png" alt="">
         </div>
-        <div id="row2">
-            <h1 class="headings"></h1>
-            <div class="gallery">
-            </div>
+        <div>
+                <a href="https://github.com/mnijjar24/run-buddy" class="github"> View My Git Repo Here</a>
         </div>
     </section>
 
@@ -73,7 +67,10 @@
             <input type="msg" name="message" class="inputmsg" placeholder="Enter Your Message">
             <input type="submit" value="SEND" id="send">
         </form>
-    </section>
+        <div class="linkedin">
+            <div><a href="https://ca.linkedin.com/in/michelle-nijjar-049211204"> View My Linkedin Profile Here</a></div>
+        </div>
+        </section>
 
 
     <!-- Footer -->
