--- a/index.html
+++ b/index.html
@@ -54,11 +54,20 @@
             <img src="assets/images/runbuddypic.png" alt="">
         </div>
         <div>
-                <a href="https://github.com/mnijjar24/run-buddy" class="github"> View My Git Repo Here</a>
+                <a href="https://mnijjar24.github.io/run-buddy/" class="github"> View Run-Buddy Here</a>
         </div>
     </section>
 
+    <img src="assets/images/insertimagehere.png"> 
+    <img src="assets/images/insertimagehere.png"> 
+    <img src="assets/images/insertimagehere.png">
+    <img src="assets/images/insertimagehere.png"> 
+    <img src="assets/images/insertimagehere.png">
+    <img src="assets/images/insertimagehere.png"> 
+
+
     <!---Contact Section-->
+
     <section id="contact">
         <h1 class="headings">CONTACT</h1>
         <form action="" class="form">
