added project one

--- a/index.html
+++ b/index.html
@@ -58,9 +58,15 @@
         </div>
     </section>
 
-    <img src="assets/images/insertimagehere.png"> 
+    <img src="assets/images/hero.jpg"> 
     <img src="assets/images/insertimagehere.png"> 
     <img src="assets/images/insertimagehere.png">
+    <br>
+    <br>
+    <div class = "wellness">
+    <a href="https://nnikhil84.github.io/wellnesshub.github.io"> Wellness Hub</a>
+    </div>
+    <br>
     <img src="assets/images/insertimagehere.png"> 
     <img src="assets/images/insertimagehere.png">
     <img src="assets/images/insertimagehere.png"> 
