added new project

--- a/index.html
+++ b/index.html
@@ -59,18 +59,17 @@
     </section>
 
     <img src="assets/images/hero.jpg"> 
-    <img src="assets/images/insertimagehere.png"> 
+    <img src="assets/images/login-page.png"> 
     <img src="assets/images/insertimagehere.png">
-    <br>
-    <br>
+<br>
     <div class = "wellness">
     <a href="https://nnikhil84.github.io/wellnesshub.github.io"> Wellness Hub</a>
     </div>
-    <br>
-    <img src="assets/images/insertimagehere.png"> 
-    <img src="assets/images/insertimagehere.png">
-    <img src="assets/images/insertimagehere.png"> 
 
+    <div class = "learning">
+        <a href="https://the-learning-porch.herokuapp.com/"> Learning Porch</a>
+        </div> 
+<br>
 
     <!---Contact Section-->
 
