--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
     </nav>
 
     <!---HomeSection-->
+    <div id="background" style="background-image: url('background.png');">
     <section id="home">
+            </style>
         <div class="main">
             <h1 class="headings">I AM <br> MICHELLE NIJJAR</h1>
-            <button class="btn">
+            <button
                 Hire me
             </button>
+        </div>
         </div>
     </section>
 
@@ -57,7 +60,10 @@
                 <a href="https://mnijjar24.github.io/run-buddy/" class="github"> View Run-Buddy Here</a>
         </div>
     </section>
-
+    <br>
+    <br>
+<h2 class="other">Other Projects:</h2>
+<br>
     <img src="assets/images/hero.jpg"> 
     <img src="assets/images/login-page.png"> 
     <img src="assets/images/insertimagehere.png">
@@ -74,22 +80,25 @@
     <!---Contact Section-->
 
     <section id="contact">
-        <h1 class="headings">CONTACT</h1>
-        <form action="" class="form">
+        <h1 class="cont">Contact Me</h1>
+        <br>
+        <br>
+        <form class="form">
             <input type="text" name="name" class="input" placeholder="Enter Your Name">
             <input type="email" name="email" class="input" placeholder="Enter Your Email">
             <input type="msg" name="message" class="inputmsg" placeholder="Enter Your Message">
             <input type="submit" value="SEND" id="send">
         </form>
+        
         <div class="linkedin">
             <div><a href="https://ca.linkedin.com/in/michelle-nijjar-049211204"> View My Linkedin Profile Here</a></div>
         </div>
         </section>
 
-
     <!-- Footer -->
     <footer class="thankyou">
         <h2>Thank you for visiting!</h2>
+
 
     </footer>
 </body>
