--- a/index.html
+++ b/index.html
@@ -38,13 +38,28 @@
                 <img src="assets/images/michelle.jpeg" alt="">
                 <div class="intro">
                     <h2>MICHELLE NIJJAR</h2>
-                    <p> A little bit about me is that I am a current student that is learning web development! Aside
+                    <p class = "description"> A little bit about me is that I am a current student that is learning web development! Aside
                         from this, I also hold a bachelors degree in Finance from the University of Guelph. I have a
                         tremendous amount of hobbies that I do in my free time which includes painting, cooking and
                         reading books! It has been an exciting journey so far as a web developer and I am thrilled to be
                         learning more concepts each and every day. I would love to obtain experience in doing what I
                         study so I can use my knowledge to help the goodwill of a company! Continue to browse this site
-                        to see my portfolio and how to contact me! </p>
+                        to see my portfolio and how to contact me!
+                        
+                        <br>
+                        <br>
+
+                        If you wish to contact me by email, please do so at michellenijjar97@gmail.com
+                        </p>
+
+                        <br>
+                        <br>
+<div class = "resume">
+    Also, check out my resume here:
+    <a href="https://docs.google.com/document/d/1r_jat8iPaqBGnGoIgk56E5KGh0uREMTQaaXk-T_mN3Y/edit?usp=sharing"> Michelle's Resume</a>
+
+</div>
+
                 </div>
             </div>
     </section>
@@ -56,24 +71,50 @@
         <div class="gallery">
             <img src="assets/images/runbuddypic.png" alt="">
         </div>
-        <div>
+        <div class = "run">
                 <a href="https://mnijjar24.github.io/run-buddy/" class="github"> View Run-Buddy Here</a>
+                <br>
+                <a href="https://github.com/mnijjar24/run-buddy" class="github"> Run Buddy Repository</a>
+                <br>
+                <br>
+                <br>
+                <br>
+                <p>A website that offers fitness training services. Come check it out!</p>
         </div>
     </section>
     <br>
     <br>
 <h2 class="other">Other Projects:</h2>
 <br>
-    <img src="assets/images/hero.jpg"> 
+    <img src="assets/images/hero.jpg">  
     <img src="assets/images/login-page.png"> 
     <img src="assets/images/insertimagehere.png">
 <br>
     <div class = "wellness">
+        <p>
+            Provides users with an opportunity to
+            <br>
+            obtain their body mass index (BMI), 
+            <br> search for new recipes based on their 
+            <br> nutritional preferences and look up new 
+            <br> exercises based on their objectives.
+        </p>
     <a href="https://nnikhil84.github.io/wellnesshub.github.io"> Wellness Hub</a>
+    <br>
+    <a href="https://github.com/nnikhil84/wellnesshub.github.io/tree/main"> Wellness Hub Repository</a>
+    
     </div>
 
     <div class = "learning">
+        <p>
+            Created to act as an additional resource for students. 
+            <br>
+            Helps by offering courses and an e-book library 
+           <br> in order to help achieve higher grades through our tutoring service.
+        </p>
         <a href="https://the-learning-porch.herokuapp.com/"> Learning Porch</a>
+        <br>
+        <a href="https://github.com/mnijjar24/learning-porch"> Learning Porch Repository</a>
         </div> 
 <br>
 
